--- a/src/main/webapp/resources/core/css/sala-chat.css
+++ b/src/main/webapp/resources/core/css/sala-chat.css
@@ -1,14 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400;500&display=swap');
 
-/* Estilo global */
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f7fa;
-    margin: 0;
-    padding: 0;
-}
 
 /* Estilo para el título */
 h1, h2, h3, label {
@@ -37,14 +29,14 @@ p, span {
     z-index: 1;
     pointer-events: none;
     touch-action: none;
-    background-color: #EEE;
+    background: #EEE;
 }
 
 /* ESTILOS GENERALES */
 body {
     margin: 0;
     padding: 0;
-    background-color: #EEE;
+    background: #EEE;
     /*background-image: url('https://png.pngtree.com/background/20230610/original/pngtree-city-illustration-background-vector-picture-image_3046717.jpg');
     background-size: cover;*/
     font-family: "Open Sans", sans-serif;
@@ -85,7 +77,7 @@ header > div {
     position: relative;
 }
 
-.titulo-principal {
+#titulo-principal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -95,7 +87,6 @@ header > div {
     text-align: center; /* Asegura que el texto esté centrado dentro de su contenedor */
     flex-grow: 1; /* Hace que el título ocupe el espacio disponible */
     margin: 0;
-    color: #27ae60;
 }
 
 /* BOTON HOME */
@@ -105,7 +96,7 @@ header > div {
 
 #back .parent {
     line-height: 1em;
-    color: #fff;
+    color: #666;
 }
 
 .circle-arrow {
@@ -130,16 +121,16 @@ header > div {
 /* Estado por defecto */
 .circle-arrow circle {
     fill: transparent;
-    stroke: #27ae60;
+    stroke: #333;
 }
 
 .circle-arrow path {
-    stroke: #27ae60;  /* La flecha es blanca */
+    stroke: #333;  /* La flecha es blanca */
 }
 
 /* Hover: colores invertidos */
 .circle-arrow:hover circle, .circle-arrow:hover path {
-    fill: #27ae60;
+    fill: #333;
     stroke: white; /* El borde del círculo se vuelve gris */
 }
 .circle-arrow:hover {
@@ -176,8 +167,9 @@ article svg {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 100vh;
-    background-color: #EEE; /* Fondo azul oscuro */
+    height: 76vh;
+    min-width: 60%;
+    background-color: transparent; /* Fondo azul oscuro */
     padding: 20px;
 }
 
@@ -189,10 +181,10 @@ article svg {
     gap: 8px;
     justify-content: space-between;
     height: 100%;
-    background-color: #f4f4f4;
+    background-color: #c1e1ed;
     border-radius: 16px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+    padding: 20px;
     overflow: hidden;
 }
 
@@ -202,15 +194,46 @@ article svg {
     overflow-y: auto;
     padding: 10px;
     border-radius: 12px;
-    background-color: #ffffff;
+    width: 100%;
+    background: radial-gradient(#faaaaa, #686060);
     box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
+
+/* Datos del otro usuario */
+.info-usuario {
+    position: sticky;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #c1e1ed;
+    padding: 10px;
+    border-radius: 10px;
+    width: max-content;
+    text-align: center;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 8px;
+}
+
+.foto-perfil {
+    width: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
 /* Barra de entrada */
 .chat-input {
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: #ffc107; /* Amarillo */
+    background-color: transparent;
     border-radius: 12px;
     padding: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -219,7 +242,7 @@ article svg {
 /* Campo de texto */
 .styledInput {
     padding: 12px;
-    border: 1px solid #ccc;
+    border: none;
     width: 100%;
     border-radius: 8px;
     font-size: 1rem;
@@ -239,17 +262,19 @@ article svg {
     border: none;
     left: 5px;
     color: white;
-    padding: 10px 15px;
-    border-radius: 8px;
+    padding: 8px 15px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    box-sizing: border-box;
+    font-weight: bold;
 }
 
 .styledButton:hover {
-    background-color: #218838;
-}
-
-.styledButton:active {
-    background-color: #1e7e34;
+    color: #218838;
+    background-color: white;
+    border: solid 4px #218838;
+    padding: 4px 7px;
 }
