--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -90,7 +90,7 @@
     </div>
 
     <form th:action="@{/amistad/enviar}" method="post">
-        <input type="hidden" name="idSolicitado" th:value="${usuario.id}">
+        <input type="hidden" name="idSolicitado" th:value="${usuarioActual.id}">
         <button type="submit" class="btn btn-primary">Enviar solicitud</button>
     </form>
 
