Quitar link del mazo

--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -102,8 +102,16 @@
             <div id="cartas-en-juego" class="d-flex flex-wrap order-1">
                 <!-- MAZO -->
                 <div th:if="${partidaIniciada != null && partidaIniciada}" class="col-4">
-                    <a th:href="@{/comenzar-truco(idPartida= ${idPartida}, idUsuario=${idUsuario})}" th:if="${ganador == null}" class="w-100">                    <img class="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
+                    <!-- Vínculo que solo aparece si la condición se cumple -->
+                    <a th:href="@{/comenzar-truco(idPartida=${idPartida}, idUsuario=${idUsuario})}"
+                       th:if="${ganador == null && mostrarMazo == null}" class="w-100">
+                        <img class="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                     </a>
+
+                    <!-- Solo la imagen, sin vínculo, si no se cumple la condición -->
+                    <img th:if="${ganador != null || mostrarMazo != null}" class="mazo"
+                         th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
+
                     <!-- IMAGEN REPARTIR -->
                     <a th:if="${ganador != null}" class="mazo">
                         <img class="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
